HMS switch to java 21 and improvements v1